<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventstatusbadge_layout"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/button_height_small"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/padding_m"
    android:paddingEnd="@dimen/padding_m"
    android:background="@drawable/bg_status_badge_on_track">

    <ImageView
        android:id="@+id/eventstatusbadge_icon"
        android:layout_width="@dimen/icon_s"
        android:layout_height="@dimen/icon_s"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/badge_icon"
        android:tint="@color/text_light"
        android:layout_marginEnd="@dimen/spacing_xs" />

    <TextView

        android:id="@+id/eventstatusbadge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_track"
        android:textSize="@dimen/text_body"
        android:textColor="@color/text_light"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/spacing_xs" />

    <ImageView
        android:id="@+id/eventstatusbadge_moreicon"
        android:layout_width="@dimen/icon_s"
        android:layout_height="@dimen/icon_s"
        android:src="@drawable/ic_arrow_right"
        android:contentDescription="@string/expand"
        android:tint="@color/text_light" />

</LinearLayout>